added text status display of results from rockblock web service

--- a/map.html
+++ b/map.html
@@ -33,6 +33,7 @@
               <form id="messaging">
                 <input type="text" id="message" placeholder="text message"/>
                 <input class="ui-button ui-widget ui-corner-all" type="submit" value="Send"/>
+                <div id="status"></div>
               </form>
             </td></tr>
           </tbody>
